ref-configs/minio/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: s3-headers
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: s3
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: s3-s3-headers@kubernetescrd
spec:
  tls:
    - hosts:
        - s3.r3t.io
        - console.s3.r3t.io
      secretName: s3-tls
  rules:
    - host: s3.r3t.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: s3-minio
                port:
                  number: 9000
    - host: console.s3.r3t.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: s3-minio-console
                port:
                  number: 9001
